// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stepper > Stepper baseVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      inputmode="decimal"
      style=""
      type="text"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper minMaxVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Stepper 步进器
  </h1>
  <p
    class="summary"
  >
    用于数量的增减。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础步进器
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            inputmode="decimal"
            style=""
            type="text"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        最大最小状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        禁用状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium t-stepper--filled-disabled"
            disabled=""
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium t-stepper--filled-disabled"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        步进器样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--outline t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--outline t-stepper__input--medium"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--outline t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--normal t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--normal t-stepper__input--medium"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--normal t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        步进器尺寸
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="stepper-example"
      >
        <div
          class="t-stepper t-stepper--large"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--large"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--large"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--large"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--medium"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-stepper t-stepper--small"
        >
          <div
            class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--small"
          >
            <svg
              class="t-icon t-icon-remove t-stepper__minus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M4 11L20 11V13L4 13L4 11Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <input
            class="t-stepper__input t-stepper__input--filled t-stepper__input--small"
            inputmode="numeric"
            style=""
            type="tel"
          />
          <div
            class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--small"
          >
            <svg
              class="t-icon t-icon-add t-stepper__plus-icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper sizeVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--large"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--large"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--large"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--large"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--small"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--small"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--small"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--small"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper statusVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium t-stepper--filled-disabled"
      disabled=""
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium t-stepper--filled-disabled"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Stepper > Stepper themeVue demo works fine 1`] = `
<div
  class="stepper-example"
>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--filled t-stepper__input--medium"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--filled t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--outline t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--outline t-stepper__input--medium"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--outline t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-stepper t-stepper--medium"
  >
    <div
      class="t-stepper__minus t-stepper__minus--normal t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-remove t-stepper__minus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 11L20 11V13L4 13L4 11Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      class="t-stepper__input t-stepper__input--normal t-stepper__input--medium"
      inputmode="numeric"
      style=""
      type="tel"
    />
    <div
      class="t-stepper__plus t-stepper__plus--normal t-stepper__icon--medium"
    >
      <svg
        class="t-icon t-icon-add t-stepper__plus-icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;
